feat: add SchedulerController for manual monitor checks and implement configurable CORS origins